--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             TU PROFESOR DE AMOR :3 
         </p>
 
-        <img src="https://photos.app.goo.gl/BAbE6Y8yPcEyKSUz5" >
+        <img src="https://lh3.googleusercontent.com/pw/AJFCJaVi7aiEue9ALHC-vk2HYvGVr5Tpa2Enc6AJYMAisIHa48P-1frB1k4a16N4cpmYVzL-SjyqQ_x5-hskGkmFHP1TmBzC16pF6DsRJd81tDJslLo9_FFfwR7bcoiVQslxF0I50EPytXGAxHWiys9-q8edKg=w229-h344-s-no" >
         
 		<a href="segundo.html" class="btn">Ir al regalitoooooo</a>
 	</div>
